--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "no-ansi"
 version = "0.1.0"
 edition = "2021"
 license = "MIT"
+description = "A CLI tool for removing ANSI escape sequences from strings"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
